| Bug #8218 | Join does not pass string from right table | ||
|---|---|---|---|
| Submitted: | 31 Jan 2005 20:13 | Modified: | 9 Mar 2005 2:51 |
| Reporter: | Vivienne Boogaard | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S1 (Critical) |
| Version: | 4.1.9 | OS: | Microsoft Windows (Windows XP) |
| Assigned to: | Sergey Petrunya | Target Version: | |
[31 Jan 2005 20:13]
Vivienne Boogaard
[1 Feb 2005 20:57]
Miguel Solorzano
Could you please can provide a test case with database schema with data or a dump file ?. You can upload it into a zip file at: ftp://ftp.mysql.com/pub/mysql/upload using a file name identifying this bug report. Thanks in advance.
[2 Feb 2005 12:44]
Miguel Solorzano
According with your e-mail To: "'Bug Database'" <dev-bugs@mysql.com> Please feel free for to open this bug report when you will able for provide the test case. Thanks in advance.
[8 Feb 2005 5:41]
Miguel Solorzano
Thank you for the bug report I was able to repeat with 4.1.9/4.1.10 BK: +------+--------+----------+-------------+---------+-----------+-------------+------+------------+----------+---------+ | pass | userid | parentid | parentgroup | childid | groupname | groupTypeId | crse | categoryid | courseid | ColHead | +------+--------+----------+-------------+---------+-----------+-------------+------+------------+----------+---------+ | 1 | 5141 | 9 | NULL | 12 | NULL | 5 | 1 | 5 | 12 | Aug04 | | 1 | 5141 | 9 | NULL | 12 | NULL | 5 | 1 | 1 | 41 | Aug04 | | 1 | 5141 | 9 | NULL | 12 | NULL | 5 | 1 | 2 | 52 | Aug04 | | 1 | 5141 | 9 | NULL | 12 | NULL | 5 | 1 | 2 | 53 | Aug04 | | 1 | 5141 | 9 | NULL | 12 | NULL | 5 | 1 | 3 | 51 | Oct04 | | 1 | 5141 | 9 | NULL | 12 | NULL | 5 | 1 | 1 | 86 | Oct04 | | 1 | 5141 | 9 | NULL | 12 | NULL | 5 | 1 | 1 | 87 | Oct04 | | 1 | 5141 | 9 | NULL | 12 | NULL | 5 | 1 | 2 | 88 | Oct04 | | 1 | 5141 | 9 | NULL | 12 | NULL | 5 | 1 | 2 | 89 | Oct04 | +------+--------+----------+-------------+---------+-----------+-------------+------+------------+----------+---------+ 9 rows in set (0.09 sec) mysql> select version(); +-----------+ | version() | +-----------+ | 4.1.9-nt | +-----------+ 1 row in set (0.00 sec) +------+--------+----------+-------------+---------+-----------+-------------+------+------------+----------+---------+ | pass | userid | parentid | parentgroup | childid | groupname | groupTypeId | crse | categoryid | courseid | ColHead | +------+--------+----------+-------------+---------+-----------+-------------+------+------------+----------+---------+ | 1 | 5141 | 9 | NULL | 12 | NULL | 5 | 1 | 5 | 12 | Aug04 | | 1 | 5141 | 9 | NULL | 12 | NULL | 5 | 1 | 1 | 41 | Aug04 | | 1 | 5141 | 9 | NULL | 12 | NULL | 5 | 1 | 2 | 52 | Aug04 | | 1 | 5141 | 9 | NULL | 12 | NULL | 5 | 1 | 2 | 53 | Aug04 | | 1 | 5141 | 9 | NULL | 12 | NULL | 5 | 1 | 3 | 51 | Oct04 | | 1 | 5141 | 9 | NULL | 12 | NULL | 5 | 1 | 1 | 86 | Oct04 | | 1 | 5141 | 9 | NULL | 12 | NULL | 5 | 1 | 1 | 87 | Oct04 | | 1 | 5141 | 9 | NULL | 12 | NULL | 5 | 1 | 2 | 88 | Oct04 | | 1 | 5141 | 9 | NULL | 12 | NULL | 5 | 1 | 2 | 89 | Oct04 | +------+--------+----------+-------------+---------+-----------+-------------+------+------------+----------+---------+ 9 rows in set (0.28 sec) mysql> select version(); +--------------+ | version() | +--------------+ | 4.1.10-debug | +--------------+ 1 row in set (0.01 sec) +------+--------+----------+-------------+---------+--------------+-------------+------+------------+----------+---------+ | pass | userid | parentid | parentgroup | childid | groupname | groupTypeId | crse | categoryid | courseid | ColHead | +------+--------+----------+-------------+---------+--------------+-------------+------+------------+----------+---------+ | 1 | 5141 | 9 | stationer | 12 | boisecascade | 5 | 1 | 5 | 12 | Aug04 | | 1 | 5141 | 9 | stationer | 12 | boisecascade | 5 | 1 | 1 | 41 | Aug04 | | 1 | 5141 | 9 | stationer | 12 | boisecascade | 5 | 1 | 2 | 52 | Aug04 | | 1 | 5141 | 9 | stationer | 12 | boisecascade | 5 | 1 | 2 | 53 | Aug04 | | 1 | 5141 | 9 | stationer | 12 | boisecascade | 5 | 1 | 3 | 51 | Oct04 | | 1 | 5141 | 9 | stationer | 12 | boisecascade | 5 | 1 | 1 | 86 | Oct04 | | 1 | 5141 | 9 | stationer | 12 | boisecascade | 5 | 1 | 1 | 87 | Oct04 | | 1 | 5141 | 9 | stationer | 12 | boisecascade | 5 | 1 | 2 | 88 | Oct04 | | 1 | 5141 | 9 | stationer | 12 | boisecascade | 5 | 1 | 2 | 89 | Oct04 | +------+--------+----------+-------------+---------+--------------+-------------+------+------------+----------+---------+ 9 rows in set (0.25 sec) mysql> select version(); +--------------+ | version() | +--------------+ | 4.1.7-nt-max | +--------------+ 1 row in set (0.00 sec) mysql>
[14 Feb 2005 22:09]
Sergey Petrunya
Pushed into 4.1.11 and 5.0.3
[18 Feb 2005 17:33]
Vivienne Boogaard
Where do we stand on this bug? Will there be a patch we can apply to 4.1.9 implementations or do we have to go to a higher level? Can we can 4.1.7 for Linux to install instead?
[18 Feb 2005 17:44]
Miguel Solorzano
hi, It will be present in the next release 4.1.11/5.0.3. You have also the option for to build it from source yourself according instructions you can get from our Manual.
[9 Mar 2005 2:51]
Paul DuBois
Noted in 4.1.11, 5.0.3 changelogs.
